Fixed text spanning issue on mobile phones

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         text-white
       "
     >
-      <div class="container w-75">
+      <div class="container main-holder">
         <p class="display-2">InnoServer</p>
         <p class="ms-2">Powered by Innovation Center, Manipal</p>
-        <p class="ms-2 w-75">
+        <p class="ms-2 sub-holder">
           Cloud services for clubs and organizations from Manipal Academy of
           Higher Education, made by Innovation Center, Manipal. Host your
           website or webapp, access database, use
@@ -575,22 +575,15 @@
     <footer class="text-center text-lg-start bg-dark text-muted pt-2">
       <section class="">
         <div class="container text-center text-md-start mt-5">
-          <!-- Grid row -->
           <div class="row mt-3">
-            <!-- Grid column -->
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-              <!-- Content -->
               <h6 class="text-uppercase fw-bold mb-4 text-white">InnoServer</h6>
               <p>
                 Free Web hosting, provided by Manipal Academy of Higher
                 Education, for entities within.
               </p>
             </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-              <!-- Links -->
               <h6 class="text-uppercase fw-bold mb-4 text-white">Products</h6>
               <p>
                 <p class="text-reset">VPS</p>
@@ -605,11 +598,8 @@
                 <p class="text-reset">Serverless</p>
               </p>
             </div>
-            <!-- Grid column -->
 
-            <!-- Grid column -->
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-              <!-- Links -->
               <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
               <p>
                 <i class="fas fa-home me-3"></i> AB-4, Manipal Institute of
@@ -621,27 +611,16 @@
               </p>
               <p><i class="fas fa-phone me-3"></i> +91 8202925055</p>
             </div>
-            <!-- Grid column -->
           </div>
-          <!-- Grid row -->
         </div>
-      </section>
-      <!-- Section: Links  -->
-
-      <!-- Copyright -->
-      <div
-        class="text-center p-4"
-        style="background-color: rgba(0, 0, 0, 0.05)"
-      >
+      </section>  
+      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05)">
         © 2021 Copyright:
-        <a
-          class="text-reset fw-bold"
+        <aclass="text-reset fw-bold"
           href="https://manipal.edu/mu/campus-life/around-campus/campus-facilities/innovation-center.html"
-          >Innovation Center, Manipal</a
+          >Innovation Center, Manipal</aclass=
         >
       </div>
-      <!-- Copyright -->
     </footer>
-    <!-- Footer -->
   </body>
 </html>
