--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
             </div>
 
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-              <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+              <h6 class="text-uppercase fw-bold mb-4 text-white">Contact</h6>
               <p>
                 <i class="fas fa-home me-3"></i> AB-4, Manipal Institute of
                 Technology
