--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
             justify-content-center
           "
         >
-          <h3>Donts</h3>
+          <h3>Don'ts</h3>
           <ul class="list-group">
             <li class="list-group-item">
               Do not run mail servers, or blockchain mining software on the
